fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ li{
     transition: top 0.7s ease-in-out;
 }
 
-
 .nav-wrapper.hide {
     top: -80px;
  }
@@ -107,30 +106,6 @@ input[type=checkbox]{
         padding-left: 2px; 
     }
 
-     /* Hamburger mennu into and x*/
-    /*
-    .menu { 
-     display:none;
-     position: absolute;
-     color:white;
-     right: 0;
-     left: 0;
-     text-align: center;
-     padding: 16px 0;
-    }
-    .menu li:hover {
-        display: inline-block;
-        color:white;
-        transition: 0.3s ease;
-    }
-   .menu li {    
-        background-color: #1a2238b5;
-    }
-    .menu li + li {
-        margin-top: 12px;
-        margin-bottom: 4px;
-    }   
-    */
     .menu.btn {
         position: absolute;
 		z-index: 3;
@@ -152,6 +127,7 @@ input[type=checkbox]{
     }
     /* Styling the three lines to make it an X */
     .menu-btn.close .btn-line:nth-child(1) {
+        background: white;
         transform: rotate(45deg) translate(5px, 5px);
     }
 
@@ -160,6 +136,7 @@ input[type=checkbox]{
     }
 
     .menu-btn.close .btn-line:nth-child(3) {
+        background: white;
         transform: rotate(-45deg) translate(7px, -6px);
     }
 
@@ -169,7 +146,9 @@ input[type=checkbox]{
         visibility: hidden;
         margin: 0 auto;
         padding-right: 50rem;
-        margin-left: -50%;
+        margin-left: -18%;
+        align-self: center;
+        align-content: center;
     }
 
     .menu-nav{
@@ -202,19 +181,19 @@ input[type=checkbox]{
 		to the 4 items in the
 		navigation menu */
 	.nav-item:nth-child(1) {
-		transition-delay: 0.1s;
+		transition-delay: 0.05s;
 	}
 
 	.nav-item:nth-child(2) {
-		transition-delay: 0.2s;
+		transition-delay: 0.1s;
 	}
 
 	.nav-item:nth-child(3) {
-		transition-delay: 0.3s;
+		transition-delay: 0.15s;
 	}
 
 	.nav-item:nth-child(4) {
-		transition-delay: 0.4s;
+		transition-delay: 0.2s;
 	}
     /*end*/
     
@@ -248,6 +227,7 @@ input[type=checkbox]{
         margin-bottom: 3rem;
         bottom: 10px;;
     }
+    /*
     .two-column-wrapper{
         padding-left: 40px;
         align-content: center;
@@ -289,6 +269,7 @@ input[type=checkbox]{
         padding-right: 10%;
         color: #f1f1f1;
     }
+    */
 
     /* Projects links*/
       .img-text-wrapper {
@@ -346,6 +327,7 @@ input[type=checkbox]{
         padding-right: 20%;
     }
 
+    
     /* Bottom image and text */
     .two-column-wrapper {
         width: 100%;
@@ -356,12 +338,16 @@ input[type=checkbox]{
         margin-bottom: 20px;
     }
     .profile-image-wrapper{
+        right: -80px;
+        padding-left: 40px;
+        margin-left: 40px;
+        margin-right: -40px;
         margin: 0 auto;
         display: inline-block;
         position: absolute;
         height: 50vh;
         padding-left: 10px ;
-        width: 120vw;
+        width: 100vw;
     }
 
     .profile-image-wrapper img {
@@ -394,12 +380,11 @@ input[type=checkbox]{
         color: #f1f1f1;
         padding-bottom: 9rem;
     }
-
     /* Projects*/
     .projects-intro{
         width: 100%;
         margin: 0px auto;
-        margin-left: 20px;
+        margin-left: 50px;
         justify-content: center;
         align-items: center;
         height: 100%;
@@ -477,27 +462,34 @@ input[type=checkbox]{
     }
     
     /* bottom image and text*/
+    /*
     .two-column-wrapper {
+        margin-left: 30px;
         padding-top: 20px;
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
-    .portfolio-image-wrapper{
-        margin-left: 200px;
-        border-radius: 40px;
-
+   
+    .profile-image-wrapper{
+        margin: 0 auto;
+        width: 100%;
+        align-content: right;
+        padding-right: -20px;
+        padding-left: 20px;
+        margin-left: 800px;
+        margin-right: -200px;
     }
 
     .profile-image-wrapper img {
+        margin-left: 300px;
+        right: 0;
         margin-left: 200px;
         border: 2px transparent;
         border-radius: 40px;
         width: auto;
         max-width: 82%;
         height: auto;
-        padding-bottom: 2rem;
     }
-
 
     .profile-content-wrapper {
         padding: 30px;
@@ -520,6 +512,7 @@ input[type=checkbox]{
         font-size: 2rem ;
         color: #f1f1f1;
       }
+      */
 
 }
 
